--- a/ru.html
+++ b/ru.html
@@ -15,7 +15,12 @@
 <div class="nav-container">
     <div class="container">
         <nav>
-            <a href="#" class="nav-logo">Mountain<span>Run</span></a>
+                 <!-- ИЗМЕНЕНИЕ: Логотип и переключатель языка теперь в одной группе -->
+            <div class="nav-group-left">
+                <a href="#" class="nav-logo">Mountain<span>Run</span></a>
+                <!-- Переключатель языка для десктопной версии -->
+                <a href="index.html" class="lang-switch desktop-lang-switch">KZ</a>
+            </div>
             <div class="nav-links">
                 <a href="#about" class="nav-link">О марафоне</a>
                 <a href="#goals" class="nav-link">Наша цель</a>
